# lesson8-geometricobjects-A5719050

./: Exercise_1_problem_1_2.py  Exercise_1_problem_3_4.py  README.md  pyproject.toml
