[tool.poetry]
name = "repl_python3_lesson8-geometricobjects-A5719050"
version = "0.1.0"
description = ""
authors = ["A5719050 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.2.4"
shapely = "^1.7.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
